# BrokerIO

./: .dockerignore  .env  .env.dev  .env.main  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Dockerfile  Makefile  README.md  client.py  config.yaml  docker-compose.yml  docker-dev.yml  environment.yaml  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  publish-to-pypi.yml
broker/: WebConfiguration.py  __init__.py  app.py  celery_app.py  test.py
broker/cli/: Broker.py  Skills.py  __init__.py
broker/client/: Client.py  __init__.py
broker/config/: WebConfiguration.py
broker/db/: Clients.py  Registry.py  Skill.py  Skills.py  Task.py  Tasks.py  Users.py  __init__.py  registry.py  skill.py
broker/skills/: SkillModel.py
broker/sockets/: Auth.py  Register.py  RegisterRoute.py  Request.py  Requests.py  Skill.py  register.py
broker/utils/: Guard.py  JobQuota.py  Keys.py  Quota.py  __init__.py
brokerio/: __about__.py  __init__.py  __main__.py  app.py
brokerio/cli/: __init__.py
brokerio/client/: Client.py  utils.py
brokerio/db/: Database.py  __init__.py
brokerio/guard/: Guard.py  __init__.py
brokerio/skills/: SkillModel.py
brokerio/sockets/: Auth.py  Request.py  Skill.py
brokerio/utils/: __init__.py
client/: Models.py  __init__.py
docs/: api.yml
docs/source/: conf.py  error.rst  index.rst
examples/: PythonClient.ipynb  PythonPDFParser.ipynb  PythonSkill.ipynb
models/Transformer/: .env  README.md  app.py  docker-compose.yml  requirements.txt  sdf.yaml  skill.yaml
sdf/: README.md
skills/: SkillModel.py  SkillSimple.py  connect.py  llama.cpp.yml
skills/llama.cpp/: requirements.txt
src/: app.py  celery_app.py
test/: TestAuth.py  TestClient.py  TestClientA.py  TestContainer.py  __init__.py  analyse.ipynb  test.py  test_broker.py  test_cli.py  test_socketio.py  utils.py
(+68 files in other folders)
