[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

[tool.setuptools]
# This tells setuptools to look for a version using setuptools_scm's logic
# The `write-to` is optional but helpful for debugging/runtime version checks
versioning = { write-to = "my_project_name/_version.py" }