[metadata]
name = BrokerIO
version = attr:brokerio.__about__.__version__
author = Ubiquitous Knowledge Processing (UKP) Lab
author_email = dennis.zyska@tu-darmstadt.de
description = A broker for routing tasks to different services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UKPLab/CARE_broker
project_urls =
    Bug Tracker = https://github.com/UKPLab/CARE_broker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    python-socketio[client]
    python-arango
    flask-socketio
    pycryptodome
    numpy

[options.extras_require]
docker =
    docker

[options.entry_points]
console_scripts =
    brokerio = brokerio.__main__:main

[options.packages.find]
exclude = tests build docs examples

[options.package_data]
* = *.yaml, Dockerfile, requirements.txt